# devops-game

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  server.py
alembic/: env.py
alembic/versions/: 2024_03_09_1602-cec2e23d5c2b_create_users_table.py
backend/: Dockerfile  README.md  documentation.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2024_03_11_1551-cf54caaeff1f_create_table_results_and_update_field.py  2024_03_15_1647-f6b02bf3f809_add_column.py  2024_03_15_1831-9bc12d192d04_add_column_is_complete.py  2024_03_18_1734-9915d0ecf8bf_insert_data.py
backend/docs/: api.board.md  api.dependencies.md  api.field.md  api.md  api.result.md  api.routers.md  config.md  database.md  database.setup.md  main.md  models.base.md  models.md  models.users.md  utils.md  utils.repository.md  utils.utils.md
backend/src/: main.py
backend/src/api/: board.py  dependencies.py  field.py  result.py  routers.py
backend/src/database/: setup.py
backend/src/models/: fields.py  results.py
backend/src/repositories/: field.py  result.py
backend/src/schemas/: field.py  result.py
backend/tests/: test_utils.py
docs/: api.md  config.md  database.setup.md  main.md  models.base.md  utils.md  utils.utils.md
frontend/: Dockerfile  bun.lockb  package.json
frontend/src/: App.vue  main.js
src/: config.py
src/api/: board.py  dependencies.py  field.py  routers.py
src/database/: setup.py
src/models/: field.py  user.py  users.py
src/repositories/: field.py
src/utils/: repository.py  utils.py
(+17 files in other folders)
