[tool.poetry]
name = "src"
version = "0.1.0"
description = "Game for two users"
authors = ["Tminww <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
