[tool.poetry]
name = "src"
version = "0.1.0"
description = "Game for two users"
authors = ["Tminww <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.1"
fastapi = "^0.110.0"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
uvicorn = "^0.28.0"
sqlalchemy = "^2.0.28"
aiosqlite = "^0.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pdoc3 = "^0.10.0"
black = "^24.2.0"

[tool.poetry.scripts]
server = "server:server"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
